--- a/frontend/src/app/agenda/agenda.component.html
+++ b/frontend/src/app/agenda/agenda.component.html
@@ -9,7 +9,7 @@
 </div>
 <mat-accordion [multi]='true' *ngIf="city.agendas.length > 0 || newAgenda">
   <app-agenda-detail *ngIf='newAgenda' [agenda]='newAgenda' [open]='true'
-                     [companies]="consultantCompanies" [officials]="politicians"></app-agenda-detail>
+                     [companies]="consultantCompanies" [officials]="politicians" (validityChange)="enableSave($event)"></app-agenda-detail>
   <app-agenda-detail [agendaUrl]='item' *ngFor='let item of city.agendas'
                      [companies]="consultantCompanies" [officials]="politicians"
                      (agendaLoaded)="trackLatest($event)"></app-agenda-detail>
@@ -17,7 +17,7 @@
 <button mat-fab class='add-agenda-button' (click)='createAgendaDialog(target)' *ngIf='!newAgenda'>
   <mat-icon>add</mat-icon>
 </button>
-<button mat-fab class='add-agenda-button' color='primary' (click)='save($event)' *ngIf='newAgenda'>
+<button mat-fab class='add-agenda-button' color='primary' (click)='save($event)' [disabled]="!saveEnabled" *ngIf='newAgenda'>
   <mat-icon>save</mat-icon>
 </button>
 <button mat-fab class='cancel-agenda-button' color='warn' (click)='cancel($event)' *ngIf='newAgenda'>
