--- a/frontend/src/app/agenda/agenda.component.html
+++ b/frontend/src/app/agenda/agenda.component.html
@@ -1,5 +1,6 @@
 <h1 #target>{{city.name}}</h1>
-<h3><span *ngIf='subregion'>{{subregion.name}}, </span><span *ngIf='region'>{{region.name}}</span><span *ngIf='!subregion'>&nbsp;</span></h3>
+<h3><span *ngIf='subregion'>{{subregion.name}}, </span><span *ngIf='region'>{{region.name}}</span><span
+  *ngIf='!subregion'>&nbsp;</span></h3>
 <a [routerLink]="'/'"><span class="detail-title"><mat-icon>keyboard_arrow_left</mat-icon>&nbsp;<h3>Back to listing</h3></span></a>
 <div style="width:100%; text-align: center" *ngIf="city.agendas.length < 1 && !newAgenda">
   <br/>
@@ -9,7 +10,8 @@
 </div>
 <mat-accordion [multi]='true' *ngIf="city.agendas.length > 0 || newAgenda">
   <app-agenda-detail *ngIf='newAgenda' [agenda]='newAgenda' [open]='true'
-                     [companies]="consultantCompanies" [officials]="politicians" (validityChange)="enableSave($event)"></app-agenda-detail>
+                     [companies]="consultantCompanies" [officials]="politicians"
+                     (validityChange)="enableSave($event)"></app-agenda-detail>
   <app-agenda-detail [agendaUrl]='item' *ngFor='let item of city.agendas'
                      [companies]="consultantCompanies" [officials]="politicians"
                      (agendaLoaded)="trackLatest($event)"></app-agenda-detail>
@@ -17,7 +19,8 @@
 <button mat-fab class='add-agenda-button' (click)='createAgendaDialog(target)' *ngIf='!newAgenda'>
   <mat-icon>add</mat-icon>
 </button>
-<button mat-fab class='add-agenda-button' color='primary' (click)='save($event)' [disabled]="!saveEnabled" *ngIf='newAgenda'>
+<button mat-fab class='add-agenda-button' color='primary' (click)='save($event)' [disabled]="!saveEnabled"
+        *ngIf='newAgenda'>
   <mat-icon>save</mat-icon>
 </button>
 <button mat-fab class='cancel-agenda-button' color='warn' (click)='cancel($event)' *ngIf='newAgenda'>
