--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="transparent lighten-4 row"
                  style="display: inline-block; padding: 32px 48px 0px 48px;">
-                <h3>Title goes here</h3>
+                <h3>Retail Cannabis Business</h3>
                 <form class="col s12" method="post">
                     <input type="hidden" name="next" value="{{ next }}"/>
                     {% csrf_token %}
